force-app/main/default/objects/Review__c/fields/Product_Sold__c.field-meta.xml
<CustomField>
    <fullName>Product_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product_Sold</label>
    <type>Checkbox</type>
</CustomField>