force-app/main/default/objects/Review__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <label>Reviewer</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>