force-app/main/default/objects/Review__c/validationRules/Rating_Must_Be_Between_1_and_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Must_Be_Between_1_and_5</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   Rating__c &lt; 1,
   Rating__c &gt; 5
)</errorConditionFormula>
    <errorMessage>A avaliação precisa ser entre 1 e 5 estrelas.</errorMessage>
</ValidationRule>